fix app grid layout issues
+ fully move now playing to bottom bar
+ add hover state to playlist card
+ handle playing tracks from queue page

--- a/src/assets/scss/Global/index.scss
+++ b/src/assets/scss/Global/index.scss
@@ -28,9 +28,10 @@ body {
     "Segoe UI Symbol";
   font-size: 1rem;
   image-rendering: -webkit-optimize-contrast;
-  height: calc(100vh - 1rem);
-  width: calc(100vw - 1.5rem);
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
+  margin: 0;
 
   #app {
     width: 100%;
